packages/ui/src/ui/pages/query-tracker/QueryResultsView/YQLTable/YQLTable.scss
.yql-result-table {
    --qt-result-table-cell-max-width: 700px;
    font-family: var(--g-font-family-monospace);
    font-size: var(--g-text-code-2-font-size);
    line-height: var(--g-text-code-2-line-height);

    overflow: initial;

    &_mode_cell,
    &_mode_untyped {
        display: inline-block;

        width: auto;
        height: auto;
        margin-left: 15px;
    }

    .unipika {
        display: inline-block;

        max-width: var(--qt-result-table-cell-max-width);

        & .incomplete {
            background-color: initial;

            &::after {
                content: none;
            }
        }

        video {
            max-width: var(--qt-result-table-cell-max-width);
        }
    }

    .data-table {
        --data-table-header-vertical-padding: 6px;
        --data-table-cell-vertical-padding: 6px;
        --data-table-color-footer-area: var(--g-color-base-misc-light);
        --data-table-row-height: auto;

        &__table-wrapper {
            display: inline-block;

            vertical-align: top;
        }

        &__table {
            background: var(--g-color-base-background);
        }

        &__th {
            font-weight: 600;
        }

        &__td:not(&__index) {
            padding-right: calc(10px + var(--data-table-cell-horizontal-padding));
        }

        &__td {
            position: relative;

            overflow: initial;

            text-overflow: initial;
        }

        &__td,
        &__th {
            max-width: var(--qt-result-table-cell-max-width);
            box-sizing: content-box;
        }
    }

    &__cell-copy-to-clipboard {
        position: absolute;
        top: 4px;
        right: 4px;
        width: 16px;
        height: 16px;
    }
}

